--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p><a href="http://sarriaroman.github.io/Keystone-Rest-API/KeystoneRest.html">http://sarriaroman.github.io/Keystone-Rest-API</a></p>
+<p><a href="http://sarriaroman.github.io/Keystone-Rest-API/documentation/KeystoneRest.html">http://sarriaroman.github.io/Keystone-Rest-API</a></p>
 
 <h2>
 <a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Options</h2>
@@ -150,6 +150,7 @@
         <aside id="sidebar">
 		  <a href="http://sarriaroman.github.io/Keystone-Rest-API/documentation/KeystoneRest.html" class="button">
             <small>Documentation</small>
+			  JSDoc
           </a>
 			
           <a href="https://github.com/sarriaroman/Keystone-Rest-API/zipball/master" class="button">
